[package]
name = "filesync"
version = "0.1.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2018"

[lib]
name = "filesync"

[dependencies]
tokio = { version = "0.3", features = ["full"] }
futures = "0.3"
utime = "0.3.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

rust-crypto = "0.2.36"

rand = "0.8.0"